Update Pages “floor-plans”

--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -24,9 +24,10 @@ sections:
       * 2nd Level **1,362 sq. ft.**
       * Total Finished **1,563 sq. ft.**
       * 1st Level (unfinished) **706 sq. ft.**
-      * **Total Square Feet w/unfinished - 2,269 sq. ft.**
+      * Total Square Feet (with unfinished) **2,269 sq. ft.**
+
       * 2-Car Garage **466 sq. ft.**
-      * **Total Square Feet Including Garage - 2,735 sq. ft.**
+      * Total Square Feet (with garage) **2,735 sq. ft.**
     images:
       - image: /images/uploads/redwood-elevation.png
         label: Artists Concept of The Redwood Elevation
