--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -112,3 +112,38 @@ sections:
       - image: /images/uploads/birch-derivative-second-floor.png
         label: Second floor plans of The Birch Derivative
     type: images_only
+  - content: |-
+      ## Specifications
+
+      * 2 bed
+      * 2 bath
+      * 2 car garage
+      * 9ft. ceiling on 1st level
+      * 9-6ft. coffered 2nd level
+      * Unfinished 1st level bonus
+      * Back patio with lawn
+
+      ## Calculations
+
+      * 1st Level **201 sq. ft**
+      * 2nd Level **1,362 sq. ft.**
+      * Total Finished **1,563 sq. ft.**
+      * 1st Level (unfinished) **706 sq. ft.**
+      * Total Square Feet (with unfinished) **2,269 sq. ft.**
+
+      * 2-Car Garage **466 sq. ft.**
+      * Total Square Feet (with garage) **2,735 sq. ft.**
+    images:
+      - image: /images/uploads/redwood-derivative-elevation.png
+        label: Artist rendition of The Redwood Derivative Elevation
+    title: The Redwood - Derivative
+    type: images_left
+  - files:
+      - file: /images/uploads/1-11-19_redwood_derivative.pdf
+        label: Download Brochure
+    images:
+      - image: /images/uploads/redwood-derivative-first-floor.png
+        label: First floor plans of The Redwood Derivative
+      - image: /images/uploads/redwood-derivative-second-floor.png
+        label: Second floor plans of The Redwood Derivative
+    type: images_only
