Update Pages “elevations”

--- a/data/pages/elevations.yml
+++ b/data/pages/elevations.yml
@@ -3,7 +3,8 @@ title: Elevations
 description: description
 sections:
   - images:
-      - image: /images/uploads/p0.png
+      - image: >-
+          /images/uploads/t-6968a-18e_triumph_spring_run_-_the_denver_4-plex__bldg-1__walkout_scene_02_2018-02-21_-_1-1-.png
     title: Elevations
     type: header
   - images:
