Update Pages “the-perfect-location”

--- a/data/pages/the-perfect-location.yml
+++ b/data/pages/the-perfect-location.yml
@@ -15,10 +15,7 @@ sections:
       - image: /images/uploads/untitled.jpg
     title: The Perfect Location
     type: header
-  - content: >-
-      SpringRun is the center-point between Salt Lake and Utah counties. It's
-      just 12 minutes from I-15, 15 minutes to northern Utah County technology
-      companies, and 20 minutes to the major business centers of both counties.
+  - content: ''
     files:
       - label: Get Directions
         url: >-
@@ -27,4 +24,4 @@ sections:
       - image: /images/uploads/screen-shot-2018-07-05-at-9.14.48-pm.png
         label: Map with directions to SpringRun
     title: ''
-    type: images_left
+    type: images_only
