--- a/data/settings.yml
+++ b/data/settings.yml
@@ -1,3 +1,3 @@
 title: Spring Run
 subtitle: Townhome Village
-logo: /images/uploads/logo1.png
+logo: /images/uploads/screen-shot-2019-05-15-at-12.40.56-pm.png
