--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -2,9 +2,7 @@ slug: floor-plans
 title: Floor Plans
 description: description
 sections:
-  - images:
-      - image: >-
-          /images/uploads/t-6968a-18e_triumph_spring_run_-_the_denver_4-plex__bldg-1__walkout_scene_01_2018-02-21_-_2-1-.png
+  - images: []
     title: Floor Plans
     type: header
   - content: |-
