--- a/data/pages/floor-plans.yml
+++ b/data/pages/floor-plans.yml
@@ -243,3 +243,35 @@ sections:
       - image: /images/uploads/screen-shot-2019-05-16-at-1.25.03-pm.png
       - image: /images/uploads/screen-shot-2019-05-16-at-1.25.10-pm.png
     type: images_only
+  - content: |-
+      ## Specifications
+
+      * 3 bed
+      * 3 bath
+      * 2 car garage
+      * 9ft. ceiling on Main
+      * Vaulted area on Main
+      * Unfinished basement
+      * Back patio with lawn
+
+      ## Calculations
+
+      * 1st Level **713 sq. ft**
+      * 2nd Level **1,095 sq. ft.**
+      * Total Finished **1,808 sq. ft.**
+      * Basement (unfinished) **739 sq. ft.**
+      * Total Square Feet (with Basement) **2,547 sq. ft.**
+      * 2-Car Garage **474 sq. ft.**
+      * Total Square Feet (with garage) **3,021 sq. ft.**
+    images:
+      - image: /images/uploads/screen-shot-2019-05-16-at-1.30.15-pm.png
+    title: The Dover
+    type: images_left
+  - files:
+      - file: /images/uploads/2019-5-7-dover-w_o-logo.pdf
+        label: Download Brochure
+    images:
+      - image: /images/uploads/screen-shot-2019-05-16-at-1.29.48-pm.png
+      - image: /images/uploads/screen-shot-2019-05-16-at-1.29.55-pm.png
+      - image: /images/uploads/screen-shot-2019-05-16-at-1.30.04-pm.png
+    type: images_only
