--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -27,6 +27,7 @@ collections:
             options:
               - { label: "Single Column (Content only)", value: "content_only" }
               - { label: "Single Column (Images only)", value: "images_only" }
+              - { label: "Link List Only", value: "link_list" }
               - { label: "Two Column (Image Left)", value: "images_left" }
               - { label: "Two Column (Image Right)", value: "images_right" }
               - { label: "Page Header", value: "header" }
