Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -7,6 +7,7 @@ sections:
   - content: '# ... the perfect life!'
     images:
       - image: /images/uploads/summerfunblowingdandilions.jpg
+    title: ... the perfect life!
     type: images_left
   - images:
       - image: /images/uploads/summerfun_familyoutside.jpg
@@ -21,9 +22,9 @@ sections:
       for playing and dreaming.
 
 
-      The parks will be connected to the community by over \_\_\_\_ miles of
-      trails for walking, jogging and biking. Trails will lead to a hill-top
-      park with commanding views of the Wasatch mountains and Utah Lake.
+      The parks will be connected to the community by over 5 miles of trails for
+      walking, jogging and biking. Trails will lead to a hill-top park with
+      commanding views of the Wasatch mountains and Utah Lake.
 
 
       The townhomes will also have their own private places to play. It will
