Update Pages “community”

--- a/data/pages/community.yml
+++ b/data/pages/community.yml
@@ -1,5 +1,5 @@
 slug: community
-title: Community
+title: Perfect Community
 description: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. 
