Update Pages “community”

--- a/data/pages/community.yml
+++ b/data/pages/community.yml
@@ -4,7 +4,7 @@ description: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. 
 sections:
-  - title: Community
+  - title: Perfect Community
     type: header
   - content: ''
     images:
