--- a/data/pages/community.yml
+++ b/data/pages/community.yml
@@ -8,7 +8,7 @@ sections:
     type: header
   - content: ''
     images:
-      - image: /images/uploads/screen-shot-2018-07-23-at-7.54.35-pm.png
+      - image: /images/uploads/spring-run-townhomes-web-site-2-1.png
         label: Spring Run Community Map
     title: ''
     type: images_only
