--- a/data/pages/community.yml
+++ b/data/pages/community.yml
@@ -14,6 +14,5 @@ sections:
     type: images_only
   - content: ''
     images:
-      - image: /images/uploads/screen-shot-2018-07-23-at-7.54.45-pm.png
-        label: Map of available lots
+      - image: /images/uploads/screen-shot-2019-06-05-at-11.34.51-am.png
     type: images_only
