Update Pages “homepage”

--- a/data/pages/homepage.yml
+++ b/data/pages/homepage.yml
@@ -48,17 +48,6 @@ sections:
 
       swimming pool and meandering trails through the village.
     type: content_only
-  - content: |-
-      #### Contact
-
-      **Aaron Schroeder** [**801-808-7096**](tel:8018087096)
-
-      **Jess Schroeder** [**801-809-4997**](tel:8018094997)
-
-
-
-      #### Model Home Hours
-
-      **To Be Established When Model Is Completed**
+  - content: ''
     title: Come have fun with us!
     type: header
